# KlappblattClock

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
flipclock/: Cargo.toml
flipclock/src/: main.rs
src/: main.rs  main_blink.rs  main_serial.rs
